- Fixed disable ZIP recurse handling in Leanify (Jaff).
- Fixed an Embarcadero's VCL bug that caused view modes in add files Windows common dialog show strange strings (JoeW).
- Removed crop-transparency from gifsicle arguments, since it can downsize resulting GIF image, and thus not being lossless (Austin Donisan).
- Disable TruePNG on ICO files because it crashes (TPS).
- Updated AdvanceCOMP to 1.20 (Jaff). 
- Updated Leanify to 0.4.3.103 daily binaries.
- Updated pngquant to 2.5.2.
- Updated TruePNG to 0.6.2.2.
- Updated strip to 2.26.
- Updated Ghostcript to 9.19. Please report any issue if I should revert to 9.15.
- Updated OptiPNG to 0.7.6 since Hg 20121021 is discontinued.
- Updated ImageMagick to 6.9.3.8 with HDRI support.
- Updated to cppcheck 1.73.
- Some minor optimizations and code cleanup.


8.20 - 2016/02/13
- Added INI setting DisablePluginMask= to allow excluding execution of certain plugins. For instance DisablePluginMask=leanify;advpng.exe (hairycactus).
- Added INI setting AllowDuplicates=false to allow adding same file more than once. If enabled, adding to the grid will be much faster, specially on very large grids (Priit).
- Better High DPI compatibility.
- Use Windows 10 theme by default on Windows 8 and newer.
- Cleanedup JPEG options page glitches (d4k0).
- Delay load shcore.dll to avoid a C++ Builder bug on WINE (trlkly).
- Make child windows show always on top, even if main window uses AlwaysOnTop=false (hairycactus).
- Make FileOptimizer a true lossless tool by default by setting PDF Profile to none by default (RejZoR).
- Fix Windows 8.1 and later detection, by using RtlGetVersion because old previous functions (GetVersion, IsWin10OrLater, ...) only work for manifested applications.
- Fixed ZIP Leanify processing not honoring not recursing (Jaff).
- Adding files to grid is three times faster because of some refreshes removed, and other little tweaks (Priit).